[workspace]
members = ["macros"]

[package]
name = "quote_parse"
version = "0.1.0"
edition = "2021"
authors = ["sam0x17"]
description = "Automatically derive syn::parse::Parse using a quote-like helper macro"
keywords = ["quote", "syn", "parse", "derive", "macro"]
license = "MIT"

[dependencies]
quote_parse_macros = { version = "0.1.0", path = "macros" }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
