[package]
name = "quote_parse_macros"
version = "0.1.0"
edition = "2021"
authors = ["sam0x17"]
description = "Support macros for quote_parse https://crates.io/crates/quote_parse"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
